Fix spacing

--- a/site.css
+++ b/site.css
@@ -14,6 +14,6 @@
 
 .link {
   fill: none;
-  stroke: #ccc;
+  stroke: #eee;
   stroke-width: 1.5px;
 }
